hero image overflow correction

--- a/src/component/Hero/Hero.css
+++ b/src/component/Hero/Hero.css
@@ -1,56 +1,58 @@
-header .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* height: 80vh; */
-    width: 100%;
-    padding: 6rem 0 10rem;
-    gap: 30px;
+header .container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 6rem 0 10rem;
+	gap: 30px;
 }
-header .content{
-    flex-shrink: 0;
-    flex-basis: 50%;
+header .content {
+	flex-shrink: 0;
+	flex-basis: 50%;
 }
-header .l-heading{
-    font-size: 5.75rem;
-}
-
-header .btn{
-    border-radius: 30px;
-    margin-top: 1rem;
-    padding: 1rem 3rem;
-    font-size: 1.25rem;
+header .l-heading {
+	font-size: 5.75rem;
 }
 
-header p{
-    color: var(--grayish-violet);
-    font-size: 1.75rem;
+header .btn {
+	border-radius: 30px;
+	margin-top: 1rem;
+	padding: 1rem 3rem;
+	font-size: 1.25rem;
 }
 
-header .image img{
-    width: 65rem;
-    position: relative;
-    right: -100px;
+header p {
+	color: var(--grayish-violet);
+	font-size: 1.75rem;
 }
 
-@media (max-width: 500px){
-    header .container{
-        flex-direction: column-reverse;
-        padding: 2rem 0 10rem;
-    }
-    header .content{
-        text-align: center;
-    }
-    header .l-heading{
-        font-size: 2.5rem;
-        text-align: center;
-    }
-    header p{
-        font-size: 1rem;
-        text-align: center;
-    }
-    header .image img{
-        width: 32rem;
-        right: -90px;
-    }
+header .image img {
+	width: 65rem;
+	position: relative;
+	right: -100px;
+}
+
+@media (max-width: 500px) {
+	header {
+		overflow-x: hidden;
+	}
+	header .container {
+		flex-direction: column-reverse;
+		padding: 2rem 0 10rem;
+	}
+	header .content {
+		text-align: center;
+	}
+	header .l-heading {
+		font-size: 2.5rem;
+		text-align: center;
+	}
+	header p {
+		font-size: 1rem;
+		text-align: center;
+	}
+	header .image img {
+		width: 32rem;
+		right: -90px;
+	}
 }
